# pystock

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sandbox.ipynb
.github/workflows/: CI-CD.yml
app/: main.py
app/data/: wb-stocks.xlsx
app/views/: dashboard.py  optimization.py  simulator.py
docs/source/: conf.py  index.rst  installation.rst  modules.rst  pystock.rst  release_notes.rst
docs/source/_static/css/: theme.css
docs/source/reference/: pystock_index.rst
docs/source/usage/: index.rst
notebook/: sandbox.ipynb
pystock/: __init__.py  asset.py  config.py  constants.py  dashboard.py  data.py  main.py  portfolio.py  quantitative.py  test.ipynb
test/: test_asset.py
tests/: test_asset.py  test_portfolio.py
