[project]
name = "pystock"
version = "0.1.0"
description = "A Python package which help me to better invest in the stock market."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyomo>=6.8.0",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
    "streamlit>=1.40.0",
    "watchdog>=5.0.3",
    "yfinance>=0.2.48",
]
