[project]
name = "pystock"
version = "0.1.0"
description = "A Python package which helps me to better invest in the stock market."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Martin Debouté", email = "martin.deboute@gmail.com" }
]
keywords = ["stock market", "investment", "finance", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydata-sphinx-theme>=0.16.1",
    "pyomo>=6.8.0",
    "streamlit>=1.40.0",
    "yfinance>=0.2.48",
]

[project.urls]
"Homepage" = "https://github.com/mdeboute/pystock"
"Documentation" = "https://github.com/mdeboute/pystock/wiki"
"Source" = "https://github.com/mdeboute/pystock"
"Tracker" = "https://github.com/mdeboute/pystock/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
    "sphinx>=8.1.3",
    "validate-pyproject>=0.23",
    "watchdog>=5.0.3",
    "packaging>=24.2"
]

[tool.setuptools.packages.find]
include = ["pystock"]
