[dependency-groups]
dev = [
    "autodocsumm>=0.2.14",
    "packaging>=24.2",
    "pre-commit>=4.0.1",
    "pyprojectsort>=0.4.0",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx>=8.1.3",
    "sphinxcontrib-programoutput>=0.18",
    "validate-pyproject>=0.23",
    "watchdog>=5.0.3",
]

[project]
authors = [
    { email = "martin.deboute@gmail.com", name = "Martin Debouté" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydata-sphinx-theme>=0.16.1",
    "pyomo>=6.8.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "streamlit>=1.40.0",
    "yfinance>=0.2.48",
]
description = "A Python package which helps me to better invest in the stock market."
keywords = [
    "finance",
    "investment",
    "python",
    "stock market",
]
name = "pystock"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.license]
text = "MIT"

[project.urls]
Documentation = "https://github.com/mdeboute/pystock/wiki"
Homepage = "https://github.com/mdeboute/pystock"
Source = "https://github.com/mdeboute/pystock"
Tracker = "https://github.com/mdeboute/pystock/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "B905",
    "COM812",
    "D100",
    "D104",
    "D105",
    "D203",
    "D213",
    "EM101",
    "EM102",
    "F401",
    "F403",
    "FBT001",
    "FBT002",
    "ISC001",
    "N803",
    "N806",
    "PD901",
    "PGH003",
    "T201",
    "TRY002",
    "TRY003",
]
select = [
    "ALL",
]

[tool.setuptools.packages.find]
include = [
    "pystock",
]
